--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 
     //HTTP
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
+    //Dagger
+    api 'com.google.dagger:dagger:2.13'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
